@@ -20,7 +20,7 @@ output:
   %\VignetteIndexEntry{Quick introduction to data.tree}
 -->
 
-# Chapter 1: Introduction
+# Introduction
 
 ## Trees
 
@@ -45,7 +45,7 @@ This package offers an alternative. The tree package allows you to create hierar
 
 The package also provides convenient methods for neatly printing trees, and converting trees from and to `data.frame`s, `lists`, and other tree structures such as `dendrogram`, `phylo` objects from the ape package, `igraph`, and other packages.
 
-# Chapter 2: data.tree basics
+# data.tree basics
 
 ## Tree creation
 
@@ -391,9 +391,15 @@ Or, using igraph:
 library(igraph, quietly = TRUE, warn.conflicts = FALSE, verbose = FALSE)
 ```
 
+```{r}
+library(igraph)
+plot(as.igraph(acme))
+```
+
+
 There are many more examples in the package's demos. Type `demo(package = "data.tree")` for a list of available demoes.
 
-# Chapter 2: Tree Traversal
+# Tree Traversal
 
 Tree traversal is one of the core concepts of trees. See, for example, here: [Tree Traversal on Wikipedia](http://en.wikipedia.org/wiki/Tree_traversal).
 
@@ -459,10 +465,10 @@ You can pass a standard R function to the `Get` method. For example:
 ExpectedCost <- function(node) {
   result <- node$cost * node$p
   if(length(result) == 0) result <- NA
-  return (result))
+  return (result)
 }
 
-data.frame(ec = acme$Get(ExpectedCost))
+acme$Get(ExpectedCost, filterFun = isLeaf)
 
 ```
 
@@ -530,21 +536,21 @@ The `Set` method is the counterpart to the `Get` method. The `Set` method takes 
 
 ### Assigning values
 
-
 ```{r}
-employees <- c(NA, 52, NA, NA, 78, NA, NA, 39, NA, NA, NA)
-acme$Set(employees)
-print(acme, "employees")
+acme$Set(id = 1:acme$totalCount)
+
+print(acme, "id")
 ```
 
 The `Set` method can take multiple vectors as an input, and, optionally, you can define the name of the attribute. Finally, just as for the `Get` method, the **traversal order** is important for the `Set`.
 
 ```{r}
 secretaries <- c(3, 2, 8)
-acme$Set(noSec = secretaries, 
-         id = 1:3,
+employees <- c(52, 43, 51)
+acme$Set(secretaries, 
+         employees,
          filterFun = function(x) x$level == 2)
-print(acme, "employees", "noSec", "id")
+print(acme, "employees", "secretaries", "id")
 
 
 ```
@@ -563,20 +569,29 @@ acme$Set(avgExpectedCost = NULL)
 Previously, we have used the Get, Set and Do methods in their OO-style version. This is often very convenient for quick access to variables. However, often times you want to use the same traversal for various operations. For this reason, we have the explicit traversal mode. It works like so:
 
 ```{r}
-traversal <- Traverse(acme, traversal = "post-order", filterFun = isNotLeaf)
+traversal <- Traverse(acme, traversal = "post-order", filterFun = function(x) x$level == 2)
+Set(traversal, floor = c(1, 2, 3))
+Do(traversal, function(x) {
+    if (x$floor <= 2) {
+      x$extension <- "044"
+    } else {
+      x$extension <- "043"
+    }
+  })
+Get(traversal, "extension")
 
 ```
 
 
-# Chapter 3: Advanced Features
+# Advanced Features
 
 ## `Aggregate` method
 
 The `Aggregate` method provides a shorthand for the oft-used case when a parent is the aggregate of its children values, as seen in the previous example. `Aggregate` calls a function recursively on children. For example:
 
 
-```{r}
 
+```{r}
 Aggregate(acme, "cost", sum)
 
 ```
@@ -600,7 +615,23 @@ print(acme, "expCost")
 
 ## `Cumulate` method
 
-```{r, eval=FALSE}
+In its simplest form, the `Cumulate` function just sums up a value along siblings, taking into consideration all siblings before the node on which `Cumulate` is called:
+
+```{r}
+Cumulate(acme$IT$`Go agile`, "cost", sum)
+
+```
+
+Or, to find the minimum cost among siblings:
+
+```{r}
+Cumulate(acme$IT$`Go agile`, "cost", min)
+
+```
+
+This can be useful in combination with traversal, e.g. to calculate a running sum among siblings. Specifically, the `cacheAttribute` lets you store the running sum in a field. This not only speeds up calculation, but lets you re-use the calculated values later:
+
+```{r}
 
 acme$Do(function(node) Cumulate(node, 
                                 attribute = "cost", 
@@ -638,17 +669,17 @@ acme
 
 ## CPU
 
-The data.tree package has been built to support visualization, for rapid prototyping, and for other applications where development time saved is more important than computing time lost. Having said this, it becomes clear that big data and data.tree do not mary particularly well. Do not try to build a data.tree structure with a few million `Nodes`. Do not try to convert a JSON document with a size of a gigabyte to a data.tree structure.
+The data.tree package has been built to support visualization, to foster rapid prototyping, and for other applications where development time saved is more important than computing time lost. Having said this, it becomes clear that big data and data.tree do not marry particularly well. Do not try to build a data.tree structure with a few million `Nodes`. Do not try to convert a JSON document with a size of a gigabyte to a data.tree structure.
 
 However, if you are respecting the following guidelines, I promise you will have a lot of fun with your `Nodes`:
 
 1. Creating a `Node` is relatively expensive. `CreateRegularTree(6, 6)` creates a data.tree structure with 9331 `Nodes`. On my computer (a mid-end Notebook), this takes about 9 seconds.
-2. `Clone` is similar to `Node` creation.
+2. `Clone` is similar to `Node` creation, with an extra penalty of about 20%.
 3. Traversing (`Traverse`, `Get`, `Set` and `Do`) is realtively cheap. 
 
-The following times, just to give you an order of magnitude:
+Just to give you an order of magnitude: The following times are achieved on wherever this document is built:
 
-```{r, eval=FALSE}
+```{r}
 system.time(tree <- CreateRegularTree(6, 6))
 system.time(tree <- Clone(tree))
 system.time(traversal <- Traverse(tree))
